--- a/Frontend/frontend/package.json
+++ b/Frontend/frontend/package.json
@@ -10,6 +10,9 @@
     "react": "^18.3.1",
     "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.3.1",
+    "react-icons": "^5.3.0",
+    "react-native": "^0.76.3",
+    "react-perfect-scrollbar": "^1.5.8",
     "react-router-dom": "^6.28.0",
     "react-scripts": "5.0.1",
     "web-vitals": "^2.1.4"
